# rcli

./: Cargo.toml  cliff.toml  deny.toml  test.rest
fixture/: blake3.txt  chachakey.txt  ed25519.pk  ed25519.sk  index.html  nonce.txt  temp.txt  tmp.b64
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
